[package]
name = "practica-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
reqwest = { version = "0.11.20", features = ["json"]}
serde_json = "1"
